org.mmisw.ontmd: MMI ORR Portal
Carlos Rueda  -  http://marinemetadata.org
$Id$

2010-06-17   1.9.4.alpha
	#158: "Mechanism for tracking accesses to ontologies/terms"
	Preliminary preparations using Google analytics:
	
	- sample.build.properties: new ga.uanumber property
	- PortalConfig.GA_UA_NUMBER will capture this property (not used yet)
	
	- Asynchronous snippet inserted at the bottom of the <head> section in index.html:
	  See http://code.google.com/apis/analytics/docs/tracking/asyncTracking.html
	  NOTE: TODO: set up of index.html and other related resources should be more dynamic 
	  depending on whether or not the build property ga.uanumber has been defined. 
	  For the moment I'm hard-coding this during this preliminary testing.
	  
	- Utilities:
	  Util.trackPageview()  
	  Util.trackPageview(String pageName)
	    
	  
2010-06-16   1.9.4.alpha
	#158: "Mechanism for tracking accesses to ontologies/terms"
	- preliminary preparations using Google analytics
		  
	
	
2010-06-16   1.9.3.alpha
	Fixed issue #257:"version selection window remains open"
	- OntologyTable: add listener also to the uri element.
	
	- ControlsPanel.launchVersions:
	  - close dialog upon any change in browser history (this was kind of a bug)
	  - better location for the dialog using popup.setPopupPositionAndShow
	  

2010-06-15   1.9.2.alpha   (note: syncing version with iserver and Ont modules)
	Fixed issue #252: "omv:version gone?"
	Relevant changes only in the Ont and iserver modules.

2010-06-15   1.9.1.alpha
	- Fixed issue #245:"cannot find authority abbreviation after typing a few letters"
	  FieldWithChoose: just set limit of the suggest box to the number of options.
	  
2010-06-14   1.9.0.alpha
	Issue #242: "admin interface to remove an ontology" implemented:
	- Changes in Ont and iserver modules completed.
	- Changes in this ontmd module completed.
	Note: the deletion option is only available for the ORR admin user.

2010-04-xx   1.9.0.alpha